--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,8 +1,21 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name = "app_name">Vowcher</string>
-	<string name = "username">Username</string> 
-	<string name = "password">Password</string>
-	<string name = "login">Login</string>
-	<string name = "imgdesc">Vowcher Logo</string>
+    <string name="app_name">Vowcher</string>
+    <string name="username">Username</string>
+    <string name="password">Password</string>
+    <string name="login">Login</string>
+    <string name="imgdesc">Vowcher Logo</string>
+    <string name="title">Enter a title&#8230;</string>
+    <string name="amount">Enter the amount&#8230;</string>
+    <string name="Voucher_type">Select Voucher Type</string>
+    <string name="hello_world">Hello world!</string>
+    <string name="menu_settings">Settings</string>
+    <string name="title_activity_display_message">Logged in</string>
+    <string name="title_activity_voucher_add">VoucherAdd</string>
+    <string name="title_activity_datepick">Select date&#8230;</string>
+    <string name="date">Date</string>
+    <string name="desc">Enter description&#8230;</string>
+    <string name="receipt">Upload Receipt&#8230;</string>
+
 </resources>
