--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -35,5 +35,6 @@
 
     <string name="title_activity_dashboard">DashboardActivity</string>
     <string name="action_settings">Settings</string>
+    <string name="title_activity_list_element">ListElement</string>
 
 </resources>
